--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url:jdbc:mysql://localhost:3306/blog-manager
 spring.datasource.username:root
-spring.datasource.password:anhtuan
+spring.datasource.password:123456
