--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url:jdbc:mysql://localhost:3306/blog-manager
 spring.datasource.username:root
-spring.datasource.password:anhtuan
+spring.datasource.password:123456
 
 spring.resources.static-locations=file:///D:/project/Blog/src/main/resources/static/
